--- a/MeetingNotes/20181128.md
+++ b/MeetingNotes/20181128.md
@@ -36,24 +36,22 @@ Meeting:
 2.	AOB. It was decided to have a A2 Webex meeting next Wed, usual time. Short 1h meetings will continue in future, it’s good to keep them strict. 
 
 3.	Segmentation. 
-ABN comments that we have the segmentation already in specification, section 6.2, implementation considerations. There are two main issues: weather we are going to do it in the same way as in EARK, it helps to be supported at the SIP/AIP/DIP level. And when we are going to move it from just recommendation to public specification?
+ABN presents the topic. We have the segmentation already in specification, section 6.2, implementation considerations. There are two main issues: weather we are going to do it in the same way as in EARK, it helps to be supported at the SIP/AIP/DIP level. And when we are going to move it from just recommendation to public specification?
 We are proposing to do that in same way, if so, we have to update sec 6.2 with used technology and changes we made to METS spec. Any archive will need supported segmentation very soon. 
-Showing on screen sec 6.2 Handling large IPs. We haven’t seen the GH AIP fail so far. There is a slight mismatch, we have it in description in 6.2 and in the AIP, but not present in SIP. It has to be done rather soon. ABN describes some examples of 12 TB files. 
+Showing on screen sec 6.2 Handling large IPs. We haven’t seen the GH AIP fail so far. There is a slight mismatch, we have it in description in 6.2 and in the AIP, but not present in SIP. It has to be done rather soon. ABN describes examples of 12 TB files. 
 CW Q when do you do the segmentation? ABN explains how they do that, it doesn’t need a person, machine is doing it, one SIP in one IP. 
 Its complex now, discussions have taken place with SS and KA, how to do it in future. Fig 6.2.5 illustrates the created master IP and what refers to other representations and segments. Archives might not like that, it’s too complex. Comments? 
 KB comments that making out a requirement is not an issue, but sure everybody needs to do segmenting. 
-MF: we don’t have that need at the moment and no practical experience, yet. Our ingest process runs in parallel. And if the process is broken, this is problem for us. We have SIPs related to each other, linking them together. Discussion of what it means to tool developers. DNA would like to order thing like that. 
+MF: we don’t have that need at the moment and no practical experience, yet. Our ingest process runs in parallel. And if the process is broken, this is problem for us. We have SIPs related to each other, linking them together. Discussion of what it means to tool developers. 
 Discussion of examples of 12 TB video files. SG agrees and comments that they don’t have so big packages yet, but still.
-KB comments there are 2 q-s: 1 what the software can handle? 2 what producers can handle? + transfer itself, what that can handle?  This is just a replication to having representation; we already have it in the tools. In SWE we can’t say how big packages should be e.g floppy disks. It is stated by receiver and that must be based on software and hardware. We can communicate only clear understanding how to do that, if you want to segment.
+KB comments there are 2 q-s: 1 what the software can handle? 2 what producers can handle? + transfer itself, what that can handle?  This is just a replication to having representation; we already have it in the tools. In SWE we can’t say how big packages should be, e.g floppy disks. It is stated by receiver. We can communicate only clear understanding of how to do that, if you want to segment.
 ABN we need to make this requirement in some point in time. We don’t know the future of the project, but after some time we might come back to this issue. KB as we are DILCIS board and are owning the spec, we don’t make that strange comments that people are not happy until we have a clear view. Therefore we have to remove mandatories until ver 3. ABN we’ve only had rather simple test of it this far, but we can see positive aspect coming.
 Agreed: Leave it now as it is, it’s going to be reviewed today. 
 
 4.	Governance of the specification. CW – We need a policy, how we accept changes, how we judge the ver number, we need to come up with clear decision, how many people have seen and approved it - need some documenting mechanism. 
 MF proposes that we are all settled with semantic versioning, for minor changes 2 people would be fine. Voting and majority of people of DILCIS board need to approve. It is weird that same people are working with spec and then approving it in board. 
 CW explains we need governance process. HS proposes to maybe create a triage process, also to know the impact of change. Discussion of creating a roadmap, work plan, which is hard to do, probably in spring. 
-CW proposes to have a rough landing page of entire spec, when you go to the root there it is.  It’s not difficult to change. Version 2.0.0 now. We have a template for pdf. KB shares her experience of working out very long documents.
-
-PAUSE (00:42)
+CW proposes to have a rough landing page of entire spec, when you go to the root there it is.  It’s not difficult to change. Version 2.0.0 now. We have a template for pdf. KB shares her experience of working out very long documents. PAUSE (00:42)
 We have to make 2,5 decisions: 
 1- If it is ok to having the layout difference, having everything in one document, structure, not changing the text. CW will write menu bars besides. No objections, agreed.
 2 - Version number, we are releasing everything in month 11, then ver 2.0.0. The only ver we can’t control is SIARD. ERMS and geodata are also ver no 2.
@@ -63,20 +61,20 @@ IA Q shouldn’t we keep DILCIS board ver no-s separate from EARK? DILCIS board 
 KB closes the issue and KB and CW will work after the meeting and make an announcement later. 
 
 5.	Test corpora. CW
-CW gives an overview of the subject, some people have reviewed already. We have the idea of building a backlog of CSIP request, enter as a test case backlog and describes what will be measured. Would be nice if A2 group looks work done by A3. It needs to be checked if anything is missing from the list. MF Q How we suppose to proceed with packages succeed? Proposal that CW will show it to A2 meeting on Dec 12th, but he will send out the notice beforehand. It’s really important that we show how we do that. 
+CW gives an overview of the subject, some people have reviewed already. We have the idea of building a backlog of CSIP request, enter as a test case backlog and describes what will be measured. Would be nice if A2 group looks work done by A3. It needs to be checked if anything is missing from the list. MF Q How we suppose to proceed with packages succeed? Proposal that CW will show it to A2 meeting on Dec 12th, but the notice will be sent out the beforehand. It’s really important that we show how we do that. 
 
 6.	Webpages. 
-Q to all, is there missing some page KB sends out updates text? CW Q if we use hyphens? It has to be consistent. Agreed to have a dash. MF points out that DILCIS board front page is not good. KA will change the page and creates a separate page for the current review. KA comments about the design and images, all credits goes to DA. JA comments that DA has it in programme near future.
+Q to all, is there missing some page? CW Q if we use hyphens? It has to be consistent. Agreed to have a dash. MF points out that DILCIS board front page is not good. KA will change the page and creates a separate page for the current review. KA comments about the design and images, all credits goes to DA. JA comments that DA has it in programme near future.
 
 7.	Second review on Dec 20th. 
 Discussion of how we give comments. Should we reply to everyone, thank you we received your comment. What regulations we have, it has to be ethical, people should be asked if you want us to keep your data etc. Comments are public in GH. In the light of GDPR it is interesting Q of keeping the data. Some people won’t like to put their names to the comments, but some people would, it depends.  
 
 8.	Next steps and milestones.
-Guidelines: developers, as soon as you come up with guideline needed, then please put an issue up to GH. All docs will be up to GH, KB describes all work going on currently. Spec deadline is M2.2 month 11; M2.4 month 12 – all. Short meeting next week. 
+Guidelines: developers, as soon as you come up with guideline needed, then please put an issue up to GH. All docs will be put up to GH. KB describes work going on currently. Spec deadline is M2.2 month 11; M2.4 month 12 – all. Short meeting next week. 
 
 9.	Release management, by IA.
-DILCIS board spec issues related to the release management strategy, what is the spec update process. IA shows semantic versioning concept with three categories: MAJOR, MINOR and PATCH (for minor changes like typos, bugs). The Q is that if we should fit every possible change to these categories. Discussion of different occasions take place. The next Q is if you don’t follow the semantic versioning of E-ARK spec-s, what does this mean to developers, what about minors? Does that really mean all software tools that fulfil the req-s of the previous minor version should work with it?  E.g Are you going to update Roda-In for a minor revision?  Is it a should or a may? Should means we should check weather this change in spec has smth to do with software. Discussion takes place. 
-IA major change is planned and well-detected, minor change can happen any time, we have to wait until the software is ready, minor is should. IA recommends to have major as a must and minor as a should. MF describes an experiment; we collect all the minors, e.g for two months, and then have one major. KA comments one compromise that for a minor have at least one sample software component.  IA Q about recommendations, should we transfer these to minor release? KB Its not the thing we can demand them to implement. IA I am thinking of pilots to. IA if smth is optional in a spec, then software’s should support it sooner or later. Otherwise, why should I have it in my package?
+DILCIS board spec issues related to the release management strategy, what is the spec update process. IA shows semantic versioning concept with three categories: MAJOR, MINOR and PATCH (for minor changes like typos, bugs). The Q is that if we should fit every possible change to these categories? Discussion of different occasions take place. Q is if you don’t follow the semantic versioning of E-ARK spec-s, what does this mean to developers, what about minors? Does that really mean all software tools that fulfil the req-s of the previous minor version should work with it?  E.g Are you going to update Roda-In for a minor revision?  Is it a should or a may? Should means we should check weather this change in spec has smth to do with software. Discussion takes place. 
+IA major change is planned and well-detected, minor change can happen any time, we have to wait until the software is ready. IA recommends to have major as a must and minor as a should. MF describes an experiment; we collect all the minors, e.g for two months, and then have one major. KA comments one possible compromise that for a minor have at least one sample software component.  IA Q about recommendations, should we transfer these to minor release? KB Its not the thing we can demand them to implement. IA we need to think about pilots too. If smth is optional in a spec, then software’s should support it sooner or later. Otherwise, why should I have it in my package?
 KB points out we have to differentiate it between packages and content information types. Examples by MF and KA are described. Always some communications takes place on the side of spec. There is a difference between sender’s and receiver’s side. Sender have freedom to select. Often the receiver need to implement all optional elements as well. HFB explains that in NOARK they struggled with the same. They rely on mandatory elements. 
 Agreed to leave this issue open. 
 IA shows the process schema of 4 steps, who informs who and when. Q would that process is ok for you. KB major yes, minor and patches no. 
@@ -84,5 +82,3 @@ Go back to the open Q, MF points out that minor changes are probably pushed by d
 KB we put up everything to GH, incl release management should be there, and it is easy to see there. IA comments that we should decide together the frequency of updates, input from everyone is needed. Discussion of the sample software portfolio membership updates, maybe yearly membership? There is a commitment that they need to take part of scientific work and development, etc. If the commercial company decides they don’t want to update the latest E-ARK spec, it means they don’t want to be part of sample software portfolio. 
 
 The end 12:29
-
-Notes by Karin Oolu
