--- a/MeetingNotes/20181128.md
+++ b/MeetingNotes/20181128.md
@@ -35,7 +35,8 @@ Meeting:
 
 2.	AOB. It was decided to have a A2 Webex meeting next Wed, usual time. Short 1h meetings will continue in future, it’s good to keep them strict. 
 
-3.	Segmentation. 
+3.	Segmentation
+
 ABN presents the topic. We have the segmentation already in specification, section 6.2, implementation considerations. There are two main issues: weather we are going to do it in the same way as in EARK, it helps to be supported at the SIP/AIP/DIP level. And when we are going to move it from just recommendation to public specification?
 We are proposing to do that in same way, if so, we have to update sec 6.2 with used technology and changes we made to METS spec. Any archive will need supported segmentation very soon. 
 Showing on screen sec 6.2 Handling large IPs. We haven’t seen the GH AIP fail so far. There is a slight mismatch, we have it in description in 6.2 and in the AIP, but not present in SIP. It has to be done rather soon. ABN describes examples of 12 TB files. 
@@ -48,7 +49,9 @@ KB comments there are 2 q-s: 1 what the software can handle? 2 what producers ca
 ABN we need to make this requirement in some point in time. We don’t know the future of the project, but after some time we might come back to this issue. KB as we are DILCIS board and are owning the spec, we don’t make that strange comments that people are not happy until we have a clear view. Therefore we have to remove mandatories until ver 3. ABN we’ve only had rather simple test of it this far, but we can see positive aspect coming.
 Agreed: Leave it now as it is, it’s going to be reviewed today. 
 
-4.	Governance of the specification. CW – We need a policy, how we accept changes, how we judge the ver number, we need to come up with clear decision, how many people have seen and approved it - need some documenting mechanism. 
+4.	Governance of the specification 
+
+CW – We need a policy, how we accept changes, how we judge the ver number, we need to come up with clear decision, how many people have seen and approved it - need some documenting mechanism. 
 MF proposes that we are all settled with semantic versioning, for minor changes 2 people would be fine. Voting and majority of people of DILCIS board need to approve. It is weird that same people are working with spec and then approving it in board. 
 CW explains we need governance process. HS proposes to maybe create a triage process, also to know the impact of change. Discussion of creating a roadmap, work plan, which is hard to do, probably in spring. 
 CW proposes to have a rough landing page of entire spec, when you go to the root there it is.  It’s not difficult to change. Version 2.0.0 now. We have a template for pdf. KB shares her experience of working out very long documents. PAUSE (00:42)
@@ -60,19 +63,24 @@ KA reminds E-ARK, when we normalised everything into 1.0.  For now it’s reason
 IA Q shouldn’t we keep DILCIS board ver no-s separate from EARK? DILCIS board is independent; we have to have long term strategy for ver no-s. GZ comments it comes to dependencies. KA answer  to IA: as the spec’s are most important and CSIP the most important spec, then overall release numbering of EARK follows the release no of CS in most cases. Main reason for the new grand release would be the update of CSIP. All software numbers can be different, but CS and SIP/AIP/DIP ver’s are the same. EARK release number is coming from ver no of CS. Discussion of KB’s idea to rename the grand release announcement. If we can have clear ver number, first number orders everything. IA likes CW idea that we should start simple and then if we need, more and more complex. Discussion about tool compatibilities and versions. IA wouldn’t drop the idea of giving E-ARK ver numbers to tools. From the ver numbers they would see what is compatible with what. CW we are introducing unambiguity. Compatibility matrix and examples of Roda-IN were given.  What about soft like Preservica, they are not going to say we are supporting CSIP ver 2.0. 
 KB closes the issue and KB and CW will work after the meeting and make an announcement later. 
 
-5.	Test corpora. CW
+5.	Test corpora
+
 CW gives an overview of the subject, some people have reviewed already. We have the idea of building a backlog of CSIP request, enter as a test case backlog and describes what will be measured. Would be nice if A2 group looks work done by A3. It needs to be checked if anything is missing from the list. MF Q How we suppose to proceed with packages succeed? Proposal that CW will show it to A2 meeting on Dec 12th, but the notice will be sent out the beforehand. It’s really important that we show how we do that. 
 
-6.	Webpages. 
+6.	Webpages
+
 Q to all, is there missing some page? CW Q if we use hyphens? It has to be consistent. Agreed to have a dash. MF points out that DILCIS board front page is not good. KA will change the page and creates a separate page for the current review. KA comments about the design and images, all credits goes to DA. JA comments that DA has it in programme near future.
 
-7.	Second review on Dec 20th. 
+7.	Second review on Dec 20th
+
 Discussion of how we give comments. Should we reply to everyone, thank you we received your comment. What regulations we have, it has to be ethical, people should be asked if you want us to keep your data etc. Comments are public in GH. In the light of GDPR it is interesting Q of keeping the data. Some people won’t like to put their names to the comments, but some people would, it depends.  
 
-8.	Next steps and milestones.
+8.	Next steps and milestones
+
 Guidelines: developers, as soon as you come up with guideline needed, then please put an issue up to GH. All docs will be put up to GH. KB describes work going on currently. Spec deadline is M2.2 month 11; M2.4 month 12 – all. Short meeting next week. 
 
-9.	Release management, by IA.
+9.	Release management, by IA
+
 DILCIS board spec issues related to the release management strategy, what is the spec update process. IA shows semantic versioning concept with three categories: MAJOR, MINOR and PATCH (for minor changes like typos, bugs). The Q is that if we should fit every possible change to these categories? Discussion of different occasions take place. Q is if you don’t follow the semantic versioning of E-ARK spec-s, what does this mean to developers, what about minors? Does that really mean all software tools that fulfil the req-s of the previous minor version should work with it?  E.g Are you going to update Roda-In for a minor revision?  Is it a should or a may? Should means we should check weather this change in spec has smth to do with software. Discussion takes place. 
 IA major change is planned and well-detected, minor change can happen any time, we have to wait until the software is ready. IA recommends to have major as a must and minor as a should. MF describes an experiment; we collect all the minors, e.g for two months, and then have one major. KA comments one possible compromise that for a minor have at least one sample software component.  IA Q about recommendations, should we transfer these to minor release? KB Its not the thing we can demand them to implement. IA we need to think about pilots too. If smth is optional in a spec, then software’s should support it sooner or later. Otherwise, why should I have it in my package?
 KB points out we have to differentiate it between packages and content information types. Examples by MF and KA are described. Always some communications takes place on the side of spec. There is a difference between sender’s and receiver’s side. Sender have freedom to select. Often the receiver need to implement all optional elements as well. HFB explains that in NOARK they struggled with the same. They rely on mandatory elements. 
