--- a/MeetingNotes/20181128.md
+++ b/MeetingNotes/20181128.md
@@ -47,6 +47,7 @@ MF: we don’t have that need at the moment and no practical experience, yet. Ou
 Discussion of examples of 12 TB video files. SG agrees and comments that they don’t have so big packages yet, but still.
 KB comments there are 2 q-s: 1 what the software can handle? 2 what producers can handle? + transfer itself, what that can handle?  This is just a replication to having representation; we already have it in the tools. In SWE we can’t say how big packages should be, e.g floppy disks. It is stated by receiver. We can communicate only clear understanding of how to do that, if you want to segment.
 ABN we need to make this requirement in some point in time. We don’t know the future of the project, but after some time we might come back to this issue. KB as we are DILCIS board and are owning the spec, we don’t make that strange comments that people are not happy until we have a clear view. Therefore we have to remove mandatories until ver 3. ABN we’ve only had rather simple test of it this far, but we can see positive aspect coming.
+
 Agreed: Leave it now as it is, it’s going to be reviewed today. 
 
 4.	Governance of the specification 
@@ -54,13 +55,17 @@ Agreed: Leave it now as it is, it’s going to be reviewed today.
 CW – We need a policy, how we accept changes, how we judge the ver number, we need to come up with clear decision, how many people have seen and approved it - need some documenting mechanism. 
 MF proposes that we are all settled with semantic versioning, for minor changes 2 people would be fine. Voting and majority of people of DILCIS board need to approve. It is weird that same people are working with spec and then approving it in board. 
 CW explains we need governance process. HS proposes to maybe create a triage process, also to know the impact of change. Discussion of creating a roadmap, work plan, which is hard to do, probably in spring. 
-CW proposes to have a rough landing page of entire spec, when you go to the root there it is.  It’s not difficult to change. Version 2.0.0 now. We have a template for pdf. KB shares her experience of working out very long documents. PAUSE (00:42)
+CW proposes to have a rough landing page of entire spec, when you go to the root there it is.  It’s not difficult to change. Version 2.0.0 now. We have a template for pdf. KB shares her experience of working out very long documents. 
+
+PAUSE (00:42)
+
 We have to make 2,5 decisions: 
 1- If it is ok to having the layout difference, having everything in one document, structure, not changing the text. CW will write menu bars besides. No objections, agreed.
 2 - Version number, we are releasing everything in month 11, then ver 2.0.0. The only ver we can’t control is SIARD. ERMS and geodata are also ver no 2.
 CSIP, SIP/AIP/DIP will follow along very well, but ERMS and geodata will have their own life. 
 KA reminds E-ARK, when we normalised everything into 1.0.  For now it’s reasonable to continue with 2.0, but we shouldn’t take it for granted. We need to update CSIP, SIP/AIP/DIP, but not content type versions. 
 IA Q shouldn’t we keep DILCIS board ver no-s separate from EARK? DILCIS board is independent; we have to have long term strategy for ver no-s. GZ comments it comes to dependencies. KA answer  to IA: as the spec’s are most important and CSIP the most important spec, then overall release numbering of EARK follows the release no of CS in most cases. Main reason for the new grand release would be the update of CSIP. All software numbers can be different, but CS and SIP/AIP/DIP ver’s are the same. EARK release number is coming from ver no of CS. Discussion of KB’s idea to rename the grand release announcement. If we can have clear ver number, first number orders everything. IA likes CW idea that we should start simple and then if we need, more and more complex. Discussion about tool compatibilities and versions. IA wouldn’t drop the idea of giving E-ARK ver numbers to tools. From the ver numbers they would see what is compatible with what. CW we are introducing unambiguity. Compatibility matrix and examples of Roda-IN were given.  What about soft like Preservica, they are not going to say we are supporting CSIP ver 2.0. 
+
 KB closes the issue and KB and CW will work after the meeting and make an announcement later. 
 
 5.	Test corpora
@@ -85,8 +90,11 @@ DILCIS board spec issues related to the release management strategy, what is the
 IA major change is planned and well-detected, minor change can happen any time, we have to wait until the software is ready. IA recommends to have major as a must and minor as a should. MF describes an experiment; we collect all the minors, e.g for two months, and then have one major. KA comments one possible compromise that for a minor have at least one sample software component.  IA Q about recommendations, should we transfer these to minor release? KB Its not the thing we can demand them to implement. IA we need to think about pilots too. If smth is optional in a spec, then software’s should support it sooner or later. Otherwise, why should I have it in my package?
 KB points out we have to differentiate it between packages and content information types. Examples by MF and KA are described. Always some communications takes place on the side of spec. There is a difference between sender’s and receiver’s side. Sender have freedom to select. Often the receiver need to implement all optional elements as well. HFB explains that in NOARK they struggled with the same. They rely on mandatory elements. 
 Agreed to leave this issue open. 
+
 IA shows the process schema of 4 steps, who informs who and when. Q would that process is ok for you. KB major yes, minor and patches no. 
+
 Go back to the open Q, MF points out that minor changes are probably pushed by developers. 
+
 KB we put up everything to GH, incl release management should be there, and it is easy to see there. IA comments that we should decide together the frequency of updates, input from everyone is needed. Discussion of the sample software portfolio membership updates, maybe yearly membership? There is a commitment that they need to take part of scientific work and development, etc. If the commercial company decides they don’t want to update the latest E-ARK spec, it means they don’t want to be part of sample software portfolio. 
 
 The end 12:29
