--- a/MeetingNotes/20181205.md
+++ b/MeetingNotes/20181205.md
@@ -18,7 +18,9 @@ https://carlwilson.github.io/E-ARK-AIP/
 
 https://github.com/carlwilson/E-ARK-AIP/blob/master/index.md
 
-ABN Q about images, there are few things to look, maybe after review. Discussion of editing diagrams, they actually look quite good, put them to the open source, most of our diagrams don’t need editing, etc. We need to decide together what to do with them. ABN suggest to do that after actual review, later, when it’s clear who are our target audiences who explore graphics and formats. Discussion about removing Premis part, just referring to it. JA Q if we can recommend Premis? SS yes, we keep the Premis part as a recommendation, at least basic recordings. But we should think about removing the vocabulary, 5.3.2.1, Premis vocabulary in the AIP– its good to people to have it, but it should be maintained elsewhere. We need some semantic standards to use vocabulary, and then refer to it in text. ABN comments it’s rather crucial Q. SS would remove just concrete vocabulary and say in concrete point that vocabulary is maintained e.g here. 
+ABN Q about images, there are few things to look, maybe after review. Discussion of editing diagrams, they actually look quite good, put them to the open source, most of our diagrams don’t need editing, etc. We need to decide together what to do with them. ABN suggest to do that after actual review, later, when it’s clear who are our target audiences who explore graphics and formats. 
+
+Discussion about removing Premis part, just referring to it. JA Q if we can recommend Premis? SS yes, we keep the Premis part as a recommendation, at least basic recordings. But we should think about removing the vocabulary, 5.3.2.1, Premis vocabulary in the AIP– its good to people to have it, but it should be maintained elsewhere. We need some semantic standards to use vocabulary, and then refer to it in text. ABN comments it’s rather crucial Q. SS would remove just concrete vocabulary and say in concrete point that vocabulary is maintained e.g here. 
 
 Agreed: SS propose to Karin to have in some central point Dilcis vocabulary, maybe some index page. Then we can decide later what we’ll do concretely. E.g Dilcis vocabularies, and put there some page and summary where we maintain it and what format etc. 
 
