--- a/MeetingNotes/20181211.md
+++ b/MeetingNotes/20181211.md
@@ -10,16 +10,24 @@ Minutes
 •	Phillip Tømmerholt (National Archives of Denmark)
 •	Jaime Kaminski (DLM)
 
-- Meeting text: 
+- Text: 
 
 Tomorrow is the day to publish rest of specs. MF reports the status of SIP and AIP, lot of work has been done, almost ready to publish. Final reviewer still to be found. Examples and images were taken from ver 1. The biggest problem are tables at the moment, if they are ready, all will be ok. CW has put them to GH yesterday, all sections are there. MF only need to approve the pull request.
+
 SS reports the current status of DIP, which is ready, only some minor improvements needed. Vocab sec is removed. Hope to be reviewed by PT and ABN, then can be released. Worked with CW to have harmonised layout. CW comments about generation to PDFs, there are two small issues, ready to put them out today. 
-JK comments about geodata spec, he has done language review, what to do with sec 3.4? 
+
+JK comments about geodata spec, he has done language review.
+
 KB comments that the deadline is tomorrow noon CET, specs will be sent all out to people who will update webpages. When it’s out to review, we can’t update the master file. Discussions with CW to create a branch in GH. CW will be on charge of creating branches and instructions how to do that. 
+
 Agreed: JK will review SIP and AIP tomorrow. 
+
 PT rises the Q of front matters, MF agrees it needs a major revision. Most of the text is similar on 4 documents, MF describes the details. SS can have a look also. Agreed: to let that be like it is right now. 
+
 MF has got rid of huge amount of repetitive text, Q if that happened to others as well? SS yes, similar with AIP, didn’t have time to discuss with someone. Explains what he did. 
+
 Discussion about content IPs without content, it is mandatory to have representation with not having smth in it. KB comments that comes from E-ARK, which says folder can be there but it may be empty. KB we can’t do changes to CSIP now. 
 ABN Q of pdf specs for SIARD. KB got the latest version from CO, KB will create a PDFs of eng and ger version and put it to GH. ANB we’ll fix the version nr. 
 Q of Eng language: is it an SIP or a SIP? CW, JA, JK gives their comments and agrees that it’s not typical English rule. 
+
 Notes by Karin Oolu
