--- a/MeetingNotes/20190116.md
+++ b/MeetingNotes/20190116.md
@@ -1,7 +1,6 @@
 Minutes
 
-Attendees
-
+Attendees:
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Janet Anderson (University of Brighton)
 •	Gregor Zavrsnik (National Archives of Slovenia)
@@ -14,7 +13,9 @@ Welcome after holidays. Lot of things still to do. Information about review is s
 
 Work ahead: 
 There are lot of issues in GH. For CSIP 103 issues we need to close. Some are marked haunted, which means that 99% are fixed in the text but someone else than KB has to look at them.  Some issues are concerning images, can continue when we have software. We have to make docs look the same, + geodata and ERMS into same format. We’ll do that in background when people are doing review. We need to finish up METS profile for the DIP, we have to write some guidelines, start looking endorsments to other profiles. 
+
 For now we can start with looking through all issues. 
+
 Review deadline is Feb 24th, there will be a lot of answers. We are going to take decisions and then update everything and publish all in M11 (April). 
 
 KB sends out a mail to look through all issues. 
