--- a/MeetingNotes/20190123.md
+++ b/MeetingNotes/20190123.md
@@ -5,7 +5,7 @@ Attendees
 •	Anders Bo Nielsen (National Archives of Denmark)
 •	Gregor Zavrsnik (National Archives of Slovenia)
 •	Sven Schlarb (Austrian Institute of Tehnology)
-•	*Jaime Kaminski (DLM)
+•	Jaime Kaminski (DLM)
 •	Karin Oolu (DLM)
 •	PhilipTommerholt (National Archives of Denmark)
 •	Maximilian Maede (Bundesarchiv)
@@ -18,9 +18,9 @@ Github issues – KB has added label “can be closed”, if you don’t want to
 
 We are in the process with CW of setting up branches, but not touching the master branch. 
 
-PT is double-checking that nobody has not marked can be closed yet in GH. PT will look through and mark issues he has recorded.  Everyone else should do similarly. We really need to start work with that. 
+PT is double-checking that nobody has not marked can be closed yet in GH. PT will look through and mark issues he has recorded.  Everyone else should do similarly. We really need to start work with that! 
 
-There will be no meetings next two weeks, it was decided that communication goes via e-mail meanwhile.
+There will be no meetings next two weeks, it was decided to communicate via e-mail meanwhile.
 
 Next meeting: Feb 13th. 
 
