--- a/MeetingNotes/20022019.md
+++ b/MeetingNotes/20022019.md
@@ -8,35 +8,49 @@ David Anderson (observer from DLM Forum)
 Jaime Kaminski (DLM)
 Karin Oolu (DLM)
 Maximilian Maede (Bundesarchiv)
-Ane hovdan
+Ane Hovdan (National Archives of Norway)
 
-- Agenda:
+Agenda:
 
 GitHub and branches
 The future and what we will offer to do in the next project 
 
-- Text:
+Text:
 
 KB and CW are finishing up work with branches (won’t touch master branch) in near days. 
+
 Countdown to review on Sunday. KB and JK will log in on Mon after 10AM (people were given also couple of hours on Mon morning) and check how many answers we have and in which form we have them. They could be in any format. This far we have only one but there will be more. Next Wed’s meeting we’ll go answers through. 
 
 Idea is to use the same template and same images for all presentations of EARK building blocks. JA comments that we need to sort it out, we should put it into GoogleDrive. 
 
 Ideas for future project:
+
 GZ informs about very beneficial meeting in Slovenia, guidelines for future geosystems and need for geodata spec for gis systems.
+
 KB have list of possible ideas, which contains stabilisation, guidelines, incl the training part, establish how to do the CITS (SIARD as the tricky test case), how to get more CITS, describe how you write them based on SIARD CITS case, promoting people to do that. 
+
 GZ comments that specs created by now are fundamental for existing data, he proposes specs for GIS-systems on how to archive existing systems and recommendations for systems that are being built. 
-JA confirms there is a large budget for software, there will be software. Have had talks with KA about sample software portfolio. We need development of data export system, all the management of access tools. But definitely there will be software development. 
-KB comments we need to state clearly what kind of software we are developing, so that people wouldn’t have crazy expectations like ultimate archival solutions for everyone – that is not we are going to do. 
+
+JA confirms there is a large budget for software, there will be software. Have had talks with KA about sample software portfolio. We need development of data export system, all the management of access tools. But definitely there will be software development. KB comments we need to state clearly what kind of software we are developing, so that people wouldn’t have crazy expectations like ultimate archival solutions for everyone – that is not we are going to do. 
+
 AH comments that NO is interested to continue work with EARK in future, but they are still discussing details and will come back later. 
+
 MM from SUI comments they have not talked about future yet as workshop has taken all time, but they will find time and solution to do these discussions (Koblenz, Friburg).
+
 KO will check all meeting minutes and thinks if any gaps for possible future ideas. 
+
 KB encourages all members to think about future and help with planning.
+
 Danes are not attending the meeting today but ABN has said there will be a year to get specs production ready. KB comments that when we made the first realese of IP for packages there were slow uptake, it took a year, people don’t want to implement until its official and ready. Production ready is going to happen now and stabilisation is going to take time.
+
 MF has no excellent ideas, needs time to think. Homework for next meeting. 
+
 JK has thought to develop manuals, not documentation 
+
 JA and DA: production ready, expanding cits. 
+
 KB that’s the base for a start. We need a template for CITS, provide a template of how you put it up to GH, guideline or tutorial don’t know yet. In SWE we did create a word templates, but more aproned to GH templates if it’s possible to use. We have a lot of GH documentation work to do. 
+
 JA started looking at the medical domain, some while ago we were asked about 3D CITS. It is more JK field, it was more production side of things not archiving side. Geodata also supports 3D, formats are different but concept is the same. Storing scientific measurements data is also very valuable in long term. In addition to geodata and health, there is also economics, there we already have some regulations from the union to use.  
 
 Task for the next week: Think more about new ideas, take a contact with KB if you want to discuss etc
