--- a/MeetingNotes/20022019.md
+++ b/MeetingNotes/20022019.md
@@ -10,12 +10,12 @@ Karin Oolu (DLM)
 Maximilian Maede (Bundesarchiv)
 Ane Hovdan (National Archives of Norway)
 
-Agenda:
+- Agenda:
 
-GitHub and branches
-The future and what we will offer to do in the next project 
+1. GitHub and branches
+2. The future and what we will offer to do in the next project 
 
-Text:
+- Text:
 
 KB and CW are finishing up work with branches (won’t touch master branch) in near days. 
 
@@ -47,7 +47,7 @@ MF has no excellent ideas, needs time to think. Homework for next meeting.
 
 JK has thought to develop manuals, not documentation 
 
-JA and DA: production ready, expanding cits. 
+JA and DA: production ready, expanding CITS. 
 
 KB that’s the base for a start. We need a template for CITS, provide a template of how you put it up to GH, guideline or tutorial don’t know yet. In SWE we did create a word templates, but more aproned to GH templates if it’s possible to use. We have a lot of GH documentation work to do. 
 
@@ -55,7 +55,6 @@ JA started looking at the medical domain, some while ago we were asked about 3D 
 
 Task for the next week: Think more about new ideas, take a contact with KB if you want to discuss etc
 
-11:36 the end
 
 Notes by: Karin Oolu
 
