--- a/MeetingNotes/20022019.md
+++ b/MeetingNotes/20022019.md
@@ -1,5 +1,7 @@
 Minutes
 
+- Attendees
+
 Karin Bredenberg (National Archives of Sweden, chair)
 Miguel Ferreira (KEEP Solutions)
 Janet Anderson (University of Brighton)
