--- a/MeetingNotes/28022019.md
+++ b/MeetingNotes/28022019.md
@@ -26,25 +26,26 @@ Istvan Alföldi
 1.	Release management roadmap 0.1
 
 IA shows release management strategy (to be ready by Monday to review) that shows releases of specs and validation tools. Period 2021 will be inserted as as the next project period is 2020-2021. “SIARD ver 2.1 + no revision” means they have only standard SIARD, but they need to create also content information type spec (CITS). CITS won’t have the same ver number as SIARD. PT explains the difference between CITS and SIARD: SIARD is just one file, where you put relational database in to CSIP, but then you have to have an extra req-s how your register SIARD file. Sometimes referred as content type for databases. Decided to leave it as it is. 
-GZ explains difference between geo fundamentals and GIS systems spec, some records are only geodata but some are product of a complex systems, same in ISO standard. GIS systems spec will be done in the 2nd project period, 2021. 
+GZ explains difference between geo fundamentals and GIS systems spec, some records are only geodata but some are product of complex systems, similar to ISO standard. GIS systems spec will be done in the 2nd project period 2021. 
 Discussion about validation tool for SIARD, what kind of validation we are talking about? We can’t say anything now because SIARD is owned by Swiss Federal Archives. This will come up in Bern meeting.
 PT Q Are we missing the CSIP validation? Yes, IA adds it to the table. Also adds prototype to SIP, AIP, DIP specs to v2.
 IA leaves meeting at 00:20
 
 2.	GitHub and branches (CW)
 
-CW introduces GH policy and demonstrates GH pages. New organisational level repository DILCISBoard.github.io. Idea is to make a workflow where we could provide some links to gh documentation, give ideas about repositories and specs we have, versioning and branching, providing contribution etc. GH allows to publish one particular branch and pull request specifically. If you have GH account you can create your own copy of repository, work there, use online editor etc, and then create a pull request (remember which branch your pull req is against), you pick the released ver you want to amend. This have to be reviewd by one prson from the board and then it will be merged to master officially published master branch. CW will work with diagram to make it more clear, if any questions, please e-mail to CW.  Idea is to provide a workflow where we make changes and review them before publishing.
-Feel confident to experiment, we’ll be in touch with KB and provide gentle help.
+CW introduces GH policy and demonstrates GH pages. New organisational level repository DILCISBoard.github.io. Idea is to make a workflow where we could provide some links to GH documentation, give ideas about repositories and specs we have, versioning and branching, providing contribution etc. GH allows to publish one particular branch and pull request specifically. If you have GH account you can create your own copy of repository, work there, use online editor etc, and then create a pull request (remember which branch your pull req is against), you pick the released ver you want to amend. This have to be reviewed by one prson from the board and then it will be merged to officially published master branch. CW will work with diagram to make it more clear, if any questions, please e-mail to CW.  Idea is to provide a workflow where we make changes and review them before publishing.
+Feel confident to experiment, CW and KB will be in touch and provide gentle help.
 
 3.	The review replies (KB and JK)
 
-By Sunday we got 9 responses from agencies, national archives, collaboration groups. Comments were focused on CSIP, SIP, AIP and DIP, also SIARD, overall they were happy we are doing this. KB shows detailed comments on the screen (spelling, typos, images, more explanations, previous version of CS IP, folder structure, text itself, number of creators of the package, use of some elements in METS, vocabulary for OAIS terms, and Premis terms, and lot of comments about SIARD etc). How do we go on with comments, KB suggest to split up comments so that we create a document for each one of this, excel sheet etc. Then go through all these. We need to publish conclusion document on webpage and send to respondents. GZ Q was there any to geodata spec? Yes one, and Q to reference ID. PT adds that one colleague will give comments, we need to handle them all the same way. 
-SS Q what is one comment, is that a piece of text refers to different things? KB explains it might be very different, like one line spelling error, some people have a text describing the whole problem, or excel sheet.
-First thing is we need to split them up and see, some has given overall comments. PT comments we need to see them all together it before. CW suggests to keep them small and atomic, no more than a paragraph to pull request. 
-KB me and JK will do it for full document. We have all the text as it is, getting them to all it to one place is the start. Deadline we have is by end of April, then we should have ver 2 ready. 
+We've got 9 responses by Sun from agencies, national archives, collaboration groups. Comments were focused on CSIP, SIP, AIP and DIP, also SIARD, overall, they were happy we are doing this. KB shows detailed comments on the screen (spelling, typos, images, more explanations, previous version of CS IP, folder structure, text itself, number of creators of the package, use of some elements in METS, vocabulary for OAIS and Premis terms, and lot of comments about SIARD etc). KB suggests to split up comments to create a document for each one of this, then go through all of them. We need to publish conclusion document on webpage and send to respondents. GZ Q was there any to geodata spec? Yes one, and Q to reference ID. PT adds that one colleague will give comments, we need to handle them all the same way. 
+SS Q what is one comment, is that a piece of text refers to different things? KB explains that it may be very different, e.g one line spelling error, some people have a text describing the whole problem, or excel sheet. First thing is we need to split them up and see, some has given overall comments. PT comments we need to see them all together it before. CW suggests to keep them small and atomic, no more than a paragraph to pull request. 
+KB and JK will do it for full document. We have all the text as it is, getting them to all it to one place is the start. We should have ver 2 ready by the end of April. 
 
-4.	Continuation of future plans (All to give ideas to Karin!)
+4.	Continuation of future plans 
 
-Continue from last meeting we were talking about: stabilisation, guidelines which might bepart of training, SITC for siard, get more cits, geodata (incorporating existing guidelines and referencing them) We need more cits but we cant do more sits. also who to talk to, 3d, bimm is smth big, economics, finances, e-health, medical records, more than one spec. regarding to geodata and 3d also space data - that’s the work we need to do. KO recalls from meeting minutes that we have nothing more to add except implementation guide (part of training) from Oct meeting. 
-Asap someone comes up, lets KB know. 
-Recap: KB combines responses and put it to google drive and e-mails. Big work will start next Wed. 
+Continue from last meeting we were talking about: stabilisation, guidelines which might bepart of training, CITS for SIARD, get more CITS, geodata (incorporating existing guidelines and referencing them), also who to talk to, 3D, bimm is smth big, economics, finances, e-health, medical records (more than one spec), regarding to geodata and 3D also space data - that’s the work we need to do. KO recalls from meeting minutes that we have nothing more to add except implementation guide (part of training) from Oct meeting. 
+ 
+Recap: Asap someone comes up, lets KB know. KB combines responses and put it to google drive and e-mails. Big work will start next Wed.
+
+Notes by: Karin Oolu
