--- a/MeetingNotes/28022019.md
+++ b/MeetingNotes/28022019.md
@@ -10,7 +10,7 @@ Karin Oolu (DLM)
 Carl Wilson (A3, OPF)
 PhilipTommerholt (National Archives of Denmark)
 Maximilian Maede (Bundesarchiv)
-Istvan Alföldi 
+Istvan Alföldi (A3, Poliphon)
 
 
 - Agenda:
