--- a/MeetingNotes/06032019.md
+++ b/MeetingNotes/06032019.md
@@ -23,11 +23,13 @@ Minutes
 
 CW reports of ongoing work with branching concepts and author’s guide in GH.
 
-KB confirms that everyone has got Excel sheet with comments and looked at them. SIARD comments needs to be solved with Swiss Federal Archives. MF proposes approach to handle the comments that each spec owner will take care of comments and create issues and ask others if needs help. Overall comments (13) will be looked through together. This work needs to be finished by the end of April. CW is willing help to take CSIP comments and creating issues in GH. PT offers he and ABN can take DIP part and overall comments all together. SIARD comments are tricky because they are is mixed up. 
-KB proposes she will send out an e-mail with each responsible team lead to handle the comments. KB with help from CW will take care of CSIP comments. KB will create a list of labels and sends out an e-mail. We are going to have following meetings in future about issues we are going to discuss together, also number of those of CSIP.  
+1. KB confirms that everyone has got Excel sheet with comments and looked at them. SIARD comments needs to be solved with Swiss Federal Archives. MF proposes approach to handle the comments that each spec owner will take care of comments and create issues and ask others if needs help. Overall comments (13) will be looked through together. This work needs to be finished by the end of April. CW is willing help to take CSIP comments and creating issues in GH. PT offers he and ABN can take DIP part and agrees to do overall comments all together. SIARD comments are tricky.
+It was decided that KB with help from CW will take care of CSIP comments. KB will create a list of labels and sends out an e-mail. There will be following meetings in future about issues we are going to discuss together, also number of those of CSIP.  
 
-GZ Q about future engagement of other parties, how they could help us, what input to ask from them? KB we don’t have the docs ready yet, they can see what we have done and if they have GH users they can give comments. Tell them we’re going to have SIARD as test case. Also ask what documents they need from us, how to organise collaboration, an agreement? 
+GZ Q about future engagement of other parties, how they could help us, what input to ask from them? KB we don’t have the docs ready yet, they can see what we have done and if they are GH users they can give comments. Tell them we’re going to have SIARD as test case. Also ask what documents they need from us, how to organise collaboration, an agreement? 
 
 ABN points out that many of the comments regarding SIARD are feature of req-s and addressed to EARK project. On the list of labels we will have typos, bugs, features. MF suggests to create some milestones, e.g “unplanned” for matters to be handled in future. KB comments that similar thing will be in guideline, on Fri. 
 
 Recap: KB will send out an e-mail with instructions and creates a table with labels list. There might be issues to be addressed to DILCIS Board. 
+
+Notes by: Karin Oolu
